# mlflow_template

./: .env  .gitignore  README.md  docker-compose.server.yml  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
infrastructure/: .env  Dockerfile.bentoml  docker-compose.yml
infrastructure/bentoml_server/: Dockerfile  bentofile.yaml  docker-compose.yml  pyproject.toml  requirements.txt
infrastructure/mlflow/: docker-compose.main.yml  docker-compose.mlflow-server.yml  docker-compose.yml
scripts/: import_mlflow_into_bentoml.py  service.py  train_register_model.py
src/dataset/: load.py
src/metrics/: abstract.py  classification.py  regression.py  runner.py  utils.py
src/trainer/: models.py  train.py
src/trainer/models/: classification.py  logger.py  regression.py  wrappers.py
src/utils/bentoml/: import_mlflow_model.py
src/utils/bentoml_model/: import_mlflow_model.py
src/utils/file/: characteristics.py  create.py  exists.py  load.py
src/utils/mlflow/: bucket.py  client.py  experiment.py  log.py  transfer.py
src/utils/mlflow/transfer/: download.py  upload.py
src/utils/serialization/: deserialize.py  serialize.py
