[tool.poetry]
name = "deployment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.8"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
mlflow = "^2.19.0"
boto3 = "^1.35.80"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
