[project]
name = "mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.8"
dependencies = [
    "boto3>=1.35.87",
    "fastapi>=0.115.6",
    "google>=3.0.0",
    "mlflow==2.19.0",
    "pandas>=2.2.3",
    "protobuf>=5.29.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.0",
]
